# judger-wrapper

./: CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
common/: define.h
core/: Makefile
judgeclient/: JudgeClient.cpp  JudgeClient.h
test/src/: Solution.h  main.cpp
wrapper/: JudgeWrapper.cpp  JudgeWrapper.h  define.h  wrapper.cpp  wrapper.h
